--- a/style.css
+++ b/style.css
@@ -174,6 +174,9 @@ footer{
     .cottages-content img{
       height: 200px;
       width: 200px;
-     }
+    }
+    .contact-us{
+      font-size: 25px;
+    }
   }
   
