--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ body{
 }
  .cottages{
   min-height: 120vh;
-  background-color: rgb(180, 180, 180);
+  background-color: rgb(214, 214, 214);
 }
 .attractions{
   min-height: 100vh;
@@ -113,6 +113,8 @@ body{
 .cottages-content img, .attractions-content img{
  height: 400px;
  width: 400px;
+ box-shadow: 5px 7.5px rgb(114, 114, 114);
+ margin-bottom: 10px;
 }
 .contact-us{
   text-align: center;
