--- a/style.css
+++ b/style.css
@@ -5,8 +5,10 @@
   text-decoration: none;
   list-style: none;
 }
-body{
-  font-family: Verdana, Geneva, Tahoma, sans-serif
+html{
+  text-rendering: optimizeLegibility;
+  scroll-behavior: smooth;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 .nav-bar{
   background-color: rgba(23, 84, 158, 0.7);
@@ -133,7 +135,7 @@ body{
 }
 .about-items{
   padding: 0 50px;
-  letter-spacing: 2px;
+  letter-spacing: 1.5px;
   font-size: 18px;
 }
 .about-items-title{
@@ -166,6 +168,18 @@ footer{
   width: 70px;
   height: 70px;
 }
+.copyright{
+  text-align: center;
+  font-size: 10px;
+}
+.rt-button a img{
+  height: 70px;
+  width: 70px;
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  z-index: 99;
+}
 
 
 
@@ -191,11 +205,47 @@ footer{
       height: 70vh;
     }
     footer{
-      height: 30vh;
+      height: 35vh;
     }
     .footer-items iframe{
-      width: 200px;
-      height: 200px;
+      width: 250px;
+      height: 150px;
+    }
+  }
+  @media (min-width: 381px) and (max-width: 768px) {
+    .attractions-navbar{
+      font-size: 28px;
+    }
+    .contact-us{
+      font-size: 25px;
+    }
+    .about-items img{
+      height: 20px;
+      width: 20px;
+    }
+    .footer-items iframe{
+      width: 220px;
+      height: 175px;
+    }
+  }
+  @media (max-width: 380px) {
+    .attractions-navbar, .cottages-navbar{
+      font-size: 28px;
+    }
+    .attractions-content img{
+      width: 250px;
+      height: 250px;
+    }
+    .contact-email{
+      font-size: 17px;
+    }
+    .footer-items iframe{
+      width: 175px;
+      height: 130px;
+    }
+    .rt-button{
+      width: 40px;
+      height: 40px;
     }
   }
   
