--- a/style.css
+++ b/style.css
@@ -127,14 +127,13 @@ html{
 .about-us{
   height: 47vh;
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   flex-wrap: wrap;
   text-align: center;
   color: rgb(111, 111, 111);
 }
 .about-items{
-  padding: 0 50px;
   letter-spacing: 1.5px;
   font-size: 18px;
 }
@@ -219,6 +218,21 @@ footer{
     .contact-us{
       font-size: 25px;
     }
+    .perks img{
+      width: 125px;
+      height: 125px;
+    }
+    .cottages-items img{
+      width: 300px;
+      height: 300px;
+    }
+    .about-us{
+      margin-bottom: 10px;
+    }
+    .about-items, .about-information{
+      letter-spacing: 1.5px;
+      font-size: 18px;
+    }
     .about-items img{
       height: 20px;
       width: 20px;
@@ -236,8 +250,9 @@ footer{
       width: 250px;
       height: 250px;
     }
-    .contact-email{
-      font-size: 17px;
+    .about-items, .about-information{
+      letter-spacing: 1.5px;
+      font-size: 15px;
     }
     .footer{
       height: 60vh;
