--- a/style.css
+++ b/style.css
@@ -331,6 +331,10 @@ footer{
       letter-spacing: 1.5px;
       font-size: 15px;
     }
+    .cottages-content img{
+      height: 300px;
+      width: 300px;
+    }
     .vlogs-content{
       margin: 0;
     }
