--- a/style.css
+++ b/style.css
@@ -178,7 +178,6 @@ html{
 }
 footer{
   background-image: linear-gradient(rgba(0, 0, 0, 0.65),rgba(0, 0, 0, 0.65)),url("./images/footer-img.jpg");
-  height: 50vh;
   background-size: cover;
   color: white;
 }
@@ -352,9 +351,9 @@ footer{
       margin:  0;
       margin-bottom: 20px;
     }
-    .footer{
+    /* .footer{
       height: 35vh;
-    }
+    } */
     .footer-items iframe{
       width: 175px;
       height: 130px;
