--- a/style.css
+++ b/style.css
@@ -327,16 +327,16 @@ footer{
       margin:  0;
       margin-bottom: 20px;
     }
-    .footer{
-      height: 33vh;
+    footer{
+      height: 35vh;
     }
     .footer-items iframe{
       width: 175px;
       height: 130px;
     }
     .rt-button a img{
-      width: 40px;
-      height: 40px;
+      width: 50px;
+      height: 50px;
     }
   }
   
