--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ html{
 }
 .main{
   color: white;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),url(./images/home-image.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),url(./images/background.jpg);
   background-size: cover;
   min-height: 100vh;
   display: flex;
